2003-12-09	blytkerchan
	* language.html: new file

2003-10-05	blytkerchan
	* development.html: new file
	* table.html: add link to development.html

2003-09-29	blytkerchan
	* how_you_can_help.html: fix an embedded list so it doesn't show up as
	an extra bullet in lynx

2003-09-21	blytkerchan
	* design.html: remove the "generator" meta-tag: files are hand-written
	* empty.html: ditto
	* goals.html: ditto
	* how_you_can_help.html: ditto
	* index.html: ditto
	* intended_audience.html: ditto
	* progress.html: ditto
	* table.html: ditto
	* tech_arch.html: ditto

	* table.html: remove "last updated" line - ugly in the table

	* tech_arch.html: update with description of components and files

2003-09-17	blytkerchan
	* design.html: add "This page was last updated" tag at the bottom-right
	* how_you_can_help.html: ditto
	* progress.html: ditto
	* empty.html: ditto
	* index.html: ditto
	* table.html: ditto
	* goals.html: ditto
	* intended_audience.html: ditto
	* tech_arch.html: ditto

2003-09-11	blytkerchan
	* empty.html: make it more evident where to put text

2003-09-10	blytkerchan
	* tech_arch.html: add link to list (and words to accompany it)

2003-09-04	blytkerchan
	* design.html: change layout to make room for SF logo
	* how_you_can_help.html: ditto
	* progress.html: ditto
	* empty.html: ditto
	* index.html: ditto
	* table.html: ditto
	* goals.html: ditto
	* intended_audience.html: ditto
	* tech_arch.html: ditto

2003-09-02	blytkerchan
	* grammar.msg: removed

2003-09-02	blytkerchan
	* progress.html: update

2003-09-02	blytkerchan
	* design.html: fix layout
	* empty.html: ditto
	* goals.html: ditto
	* how_you_can_help.html: ditto
	* index.html: ditto
	* intended_audience.html: ditto
	* progress.html: ditto
	* table.html: ditto
	* tech_arch.html: ditto

2003-09-02	blytkerchan
	* empty.html: set width and height of the iframe properly
	* table.html: target _top for all links
	* design.html: use iframe for the table
	* goals.html: ditto
	* how_you_can_help.html: ditto