@@ -26,7 +26,10 @@ All of the topics on this page are open for discussion on the jail-ust-lang
 list.
 </p>
 <ul>
-<li><a href="#tag001">Everything is an item</a></li>
+<li><a href="#tag003">"Everything is an item" (1)</a></li>
+<li><a href="#tag004">Grammar and syntax</a></li>
+<li><a href="#tag005">Error and exception handling</a></li>
+<li><a href="#tag001">"Everything is an item" (2)</a></li>
 <li><a href="#tag002">Soft typing: new keywords, inheritance, etc.</a></li>
 </ul>
 <p>
@@ -37,6 +40,7 @@ Stuff not yet treated here:
 <li>"is everything an object?"</li>
 <li>Attribute privacy</li>
 <li>Standard classes</li>
+<li>Standard functions</li>
 <li>Static data</li>
 <li>const</li>
 <li>memory management</li>
@@ -45,8 +49,102 @@ Stuff not yet treated here:
 </ul>
 </p>
 <hr/>
+<a name="tag003"/>
+<h2>Everything is an item</h2>
+<p>A scalar, an array, a file, a function, the program itself. To
+quote my little brother: "difference the what's?!". Of course, you
+might run into trouble assigning a value to a function - and the
+interpreter should warn you about that - but that doesn't mean it's
+wrong to do so!</p>
+<p>Of course, there are things you can do with one item that you
+can't with another: it doesn't make sense to multiply a file by
+two, unless it makes sense to multiply its contents by two.. The
+interpreter should warn the programmer about that, but that's
+another question: if the programmer decides to multiply a file,
+he'll get a multiplied file.. It's just a question of deciding on
+the semantics of the operation and the operation can be done.</p>
+<a name="tag004"/>
+<h2>Grammar and syntax</h2>
+<p>The grammar of Jail is under development. Basically, what we
+need is a simple, straight-forward grammar to be used with a syntax
+that is, also, as simple as possible.</p>
+<p>The programmer shouldn't have to care about the type behind an
+item: all they have to deal with are items and expressions, a
+program just being a complex form of an expression. Hence, the
+grammar should define rules for the use of items and the contents
+of expressions, for example:</p>
+<ul>
+<li>An expression is one of the following:
+<ul>
+<li>an item</li>
+<li>an expression, followed by an operator, followed by an
+expression</li>
+<li>an expression between brackets</li>
+</ul>
+</li>
+<li>A function call is an item followed by zero or more expressions
+between brackets</li>
+</ul>
+The restrictions on the grammar are those imposed by the parser
+generator we use, which is GNU Bison. The complete grammar is not
+complete yet, but is under development. If you want to have the
+current snapshot, you can always mail me at <i>ronald at landheer
+dot com</i> but it you want to discuss it, please mail to
+<i>jail-ust-lang-subscribe at lists dot sourceforge dot net</i>.
+That will subscribe you to the language discussion mailing list
+which is meant to define the semantics, syntax and grammar of the
+language.
+<p>We also need to define what names the programmer can give to his
+items. I've reserved anything that starts with an underscore for
+keywords. We don't need many keywords at the moment - some of the
+keywords I can think of at the moment are:</p>
+<ul>
+<li>PROGRAM to denote the program currently running</li>
+<li>ERROR to denote an error</li>
+<li>OK to denote all is well</li>
+<li>BEGIN, END, WHILE, DO<br></li>
+</ul>
+Other than the reserved words any sequence of one or more
+alphanumeric characters, starting with a letter, should be OK for
+use. However, anything starting with an underscore will be reserved
+for future, or internal, use.<br>
+<p>Some symbols may be pre-defined, such as console, stdin, stdout,
+stderr, etc. The complete list of pre-defined symbols and what they
+are for has yet to be defined. Again, if you want to join the
+discussion, please mail to <i>jail-ust-lang-subscribe at lists dot
+sourceforge dot net</i>.</p>
+<a name="tag005">
+<h2>Error and exception handling</h2>
+<p>Anybody who's tried teaching C++ to non-programmers will have
+run into the problem of explaining what an exception is: you can
+throw them and catch them like a ball, they can be of any type that
+can be thrown, they usually denote an error but they can be used as
+any part of a design, etc. etc. Due to exceptions, you need smart
+pointers (what's a pointer again?) your code needs to be
+exception-safe, etc. etc. The problems with exceptions are as
+numerous as those with threads, and some of them are related,
+too.</p>
+<p>Some errors can be expected and can be handled gracefully. For
+example, if the programmer writes a division, the divisor might be
+zero, and division by zero is mathematically impossible. In stead
+of just breaking the program, the interpreter can "gracefully"
+handle this by setting the result to "not a number" and outputting
+a warning message to the standard error device.</p>
+<p>No error should be fatal: the interpreter should never bail out
+screaming - that will only confuse the user and the programmer
+alike. OTOH, the principle of JIJO (Junk In Junk Out) should be
+upheld: if you give the interpreter a buggy program you should
+expect the interpreter to give you plenty of warnings, and perhaps
+do a lot of no-ops, but <i>it should never bail out</i>.</p>
+<p>OTOH, we can't decide aforehand how each error/exception should
+be handled. The technical architecture of the Jail Virtual Machine
+therefore has to include a way to handle different types of
+exceptions, ranging from division-by-zero to access violations. For
+this, the JailVM will use user-provided callback functions, which
+will be called in a similar way to signal handlers. These can
+either be written in Jail or in some other language.</p>
 <a name="tag001"/>
-<h2>"Everything is an item"</h2>
+<h2>"Everything is an item" (2)</h2>
 <p>IMHO, the following text (taken from jail-ust-lang) is very clear on the
 subject:</p>
 <p><i>
@@ -215,6 +313,6 @@ width="210" height="62" border="0" align="right" alt=
 </tr>
 </tbody>
 </table>
-<div align="right">This page was last updated: $Date: 2003/12/09 17:11:17 $</div>
+<div align="right">This page was last updated: $Date: 2003/12/09 19:51:41 $</div>
 </body>
 </html>
