@@ -29,7 +29,10 @@ audience</a><br></td>
 help</a><br></td>
 </tr>
 <tr>
-<td valign="top"><a href="design.html" target="_top">Language design</a><br></td>
+<td valign="top"><a href="language.html" target="_top">The Language</a><br></td>
+</tr>
+<tr>
+<td valign="top"><a href="design.html" target="_top">Designing the Language</a></td>
 </tr>
 <tr>
 <td valign="top"><a href="tech_arch.html" target="_top">Technical
