@@ -1,4 +1,9 @@
 2003-12-09	blytkerchan
+	* design.html: re-write
+	* language.html: add (most of) old contents of design.html
+	* table.html: update to reflect new file
+	* development.html: update the development plan
+
 	* language.html: new file
 
 2003-10-05	blytkerchan
